<resources>
    <string name="app_name">Gempack</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">EQuL5hKDYfZIitme20bvgl21UrjfqGQ2JcHvWSXD</string>
    <string name="parse_client_key">06TVoBeem8C6YBB7qmgB2FD9KFoaZHRrI3XCJBTr</string>

    <string name="facebook_app_id">548625728646298</string>
    <string name="facebook_app_secret">77de77c340dbfde39888239e55d7cf43</string>

    <string name="title_activity_log_in_screen">LogInScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="profile_name">ProfileName</string>
    <string name="bar_placeholder">Insert Bar</string>
    <string name="email_name">Email: </string>
    <string name="email_sample">something@something.com</string>
    <string name="profile_number">Phone no.</string>
    <string name="sample_number">+65 9483 3245</string>
    <string name="profile_requests">ProfileName Requests</string>
    <string name="large_text">Largetext</string>
    <string name="select_vendor">Vendor:</string>
    <string name="select_amt">Amount Needed:</string>
    <string name="select_meeting_pt">Meeting Point:</string>
    <string name="select_submit">Submit Gem Request</string>
    <string name="select_benefit">Benefits:</string>
    <string name="select_description">Description:</string>
    <string name="select_Date">Description:</string>
    <string name="spinner_title">Choose Vendor</string>
    <string name="gem_submit">Submit Gem</string>
    <string name="gem_amt">Amount Needed:</string>
    <string name="gem_code">Product code:</string>
    <string name="gem_name">Product name:</string>

    <string name="toast_back_press">Press back again to quit.</string>
    <string name="title_activity_pack_details">PackDetailsActivity</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="navigation_drawer_open">opened</string>

</resources>
