<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="sg.gempack.app.NewGemRequestActivity">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/gem_amt"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gemAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/gem_name"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_weight="0.50"
                android:paddingTop="20px" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/gem_code"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gemCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_weight="0.50"
                android:paddingTop="20px" />
        </LinearLayout>


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@color/gempack_brown"
            android:text="@string/gem_submit" />
    </LinearLayout>
</ScrollView>

