<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="sg.gempack.app.NewGemRequestActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/select_vendor"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/select_amt"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_weight="0.50"
                android:paddingTop="20px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/select_meeting_pt"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editmeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_weight="0.50"
                android:paddingTop="20px" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/select_benefit"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editbenefits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_weight="0.50"
                android:paddingTop="20px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingTop="11dp"
                android:text="@string/select_description"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_weight="0.50"
                android:paddingTop="20px" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical">
        </DatePicker>
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_submit" />
    </LinearLayout>
</ScrollView>

